--- a/recipes/palak paneer.html
+++ b/recipes/palak paneer.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palak Paneer (Indian Spinach and Paneer)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page2">
     <h1>Palak Paneer (Indian Spinach and Paneer)</h1>
-    <img src="https://www.allrecipes.com/thmb/GbeMLxrmiiv-cSv3A4vP2QnQJMw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8211267-9a0db1fff33847f19bee1ab386d24bce.jpg" height="250" width="300">
+    <img src="https://www.allrecipes.com/thmb/GbeMLxrmiiv-cSv3A4vP2QnQJMw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8211267-9a0db1fff33847f19bee1ab386d24bce.jpg" height="250" width="300" class="image">
     <h2>Description</h2>
     <p>It's easy to make and tasty to enjoy.</p>
     <h2>Ingredients</h2>
