--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="recipes/style.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/rajma.html">Rajma (Kidney Bean Curry)</a></li>
-        <li><a href="recipes/palak paneer.html">Palak Paneer (Indian Spinach and Paneer)</a></li>
-        <li><a href="recipes/aloo paratha.html">Aloo Paratha</a></li>
+<body class="page">
+    <h1 class="heading">Odin Recipes</h1>
+    <ul class="list">
+        <li class="l"><a href="recipes/rajma.html">Rajma (Kidney Bean Curry)</a></li>
+        <li class = "l"><a href="recipes/palak paneer.html">Palak Paneer (Indian Spinach and Paneer)</a></li>
+        <li class="l"><a href="recipes/aloo paratha.html">Aloo Paratha</a></li>
     </ul>
     
 </body>
