--- a/recipes/rajma.html
+++ b/recipes/rajma.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajma (Kidney Bean Curry)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Rajma (Kidney Bean Curry)</h1>
+<body class="page2">
+    <h1 class="title">Rajma (Kidney Bean Curry)</h1>
     <img src="https://www.allrecipes.com/thmb/pqhTmw40jvjE7v3vAklX3lhmsDw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/212366rajma-kidney-bean-curryAnonymous4x3-900a8f642100489ba050f9c9277e31e5.jpg" height="250" width="300">
     <h2>Description</h2>
     <p>Rajma is comfort food at its best. I like rajma best with simple jeera (cumin) rice. Of course, some roti would be great too.<br> When I was in college, I ate rajma at least once a week. Cheap, nutritious, and comforting. What is not to like?</p>
